fix : change url get all trx to transactions/all
